<resources>
    <string name="app_name">acazia</string>
    <string name="SignUp">Sign Up</string>
    <string name="Welcome_in_with_Fb">Welcome in with Facebook</string>
    <string name="Start_with_phone_number">Start with phone number</string>
    <string name="Joined_us_before_login">Joined us before? Login</string>
    <string name="Create">Create</string>
    <string name="Account">Account</string>
    <string name="phone_number">Phone number</string>
    <string name="Sign_in">Sign in</string>
    <string name="Verification">Verification</string>
    <string name="Code">Code</string>
    <string name="enterCode">Enter the 4 digit code send to</string>
    <string name="ResendCode">Resend code in 4:33</string>
    <string name="PleaseEnterYourNumber">Please Enter Your Phone Number</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PrivacyPolicy">By signing up, you agree to the Terms and Conditions and the Privacy Policy.</string>
    <string name="yourProfile">Your Profile</string>
    <string name="UserName">UserName</string>
    <string name="yourCity">Your city</string>
    <string name="YourBirthDate">Your Birthdate</string>
    <string name="ProfileCreated">Profile Created!</string>
    <string name="Find">Find</string>
    <string name="Facebook">Facebook</string>
    <string name="Friends">Friends</string>
    <string name="youChose">You chose which friends to follow. We\'ll never post to Facebook withou your permission.</string>
    <string name="conectTofb">Connect to Facebook</string>
    <string name="skip">Skip</string>
    <string name="Follow">Follow</string>
    <string name="People">People</string>
    <string name="YouKnow">You Know</string>
    <string name="findFriends">Find friends to follow your contacts list</string>
    <string name="Conect">Connect</string>
    <string name="Enable">Enable</string>
    <string name="push">Push</string>
    <string name="Notification">Notifications</string>
    <string name="tvNotifi">Be notified of session invites, comment, mentions, and more news!</string>
    <string name="Welcome">Welcome</string>
    <string name="Back">Back</string>
    <string name="phone_email">Phone number/Email</string>
    <string name="forgotPass"><u>Forgot Password</u></string>
    <string name="Reset">Reset</string>
    <string name="youWillbeSend">You will be sent a text with instructions to reset your password.</string>
    <string name="EnterNewPass">Enter New Password</string>
    <string name="PasswordChanged">Password Changed!</string>
    <string name="Sessions">Sessions</string>
    <string name="LocalFragment">Local</string>
    <string name="YourCircleFragment">Your Circle</string>
    <string name="TrendingFragment">Trending</string>
    <string name="Following">Following</string>
    <string name="letStart">Let\'s Start</string>
    <string name="CreateSession">Create Session</string>
    <string name="test">Thuộc tính android:inputType dùng để thiết lập kiểu nhập liệu, hiện thị. Tương ứng với mỗi kiểu này EditText sẽ có cách hiện thị cũng như liên kết với loại bàn phím tương ứng. Ví dụ như thiết lập nhập password thì dữ liệu nhập vào sẽ hiện thị bằng ký hiệu *, hay chọn dữ liệu số thì bàn phím xuất hiện là loại bàn phím số  Các hằng số gán vào android:inputType có thể kết hợp nhiều loại với nhau bằng phép toán |, tham khảo đầy đủ tại: inputType, ở đây là một số giá trị hay dùng:</string>
    <string name="SessionsTitle">Session Title</string>
    <string name="SessionsDescription">Session Description</string>
    <string name="SessionsTitleContent">Shop opening</string>
    <string name="SessionsDescriptionContent">In the order to discuss the general function of the logo, we must firstly identify and define the environment where this will have to fulfill its function.</string>
    <string name="privateSesson">Is this a private sesstion? ( Users will require to get your permission to attend)</string>
    <string name="Public">Public</string>
    <string name="Private">Private</string>
    <string name="CoverImg">Cover Image</string>
    <string name="taptoEditOrRemove">Tap to Edit or Remove</string>
</resources>
